@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.panteleyev</groupId>
     <artifactId>money-manager</artifactId>
-    <version>19.1.0</version>
+    <version>19.2.0</version>
     <packaging>jar</packaging>
     <name>MoneyManager</name>
 
@@ -15,24 +15,27 @@
         <app.main.class>org.panteleyev.money.MoneyApplication</app.main.class>
         <timestamp>${maven.build.timestamp}</timestamp>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
-        <commons-version>19.1.1</commons-version>
+        <persistence-version>19.2.0</persistence-version>
+        <commons-version>19.2.0</commons-version>
         <javafx-version>11.0.2</javafx-version>
         <controlsfx-version>9.0.0</controlsfx-version>
-        <apache-csv-version>1.6</apache-csv-version>
         <mysql-connector-version>8.0.15</mysql-connector-version>
         <jsoup-version>1.11.3</jsoup-version>
+        <jsch-version>0.1.55</jsch-version>
+        <gson-version>2.8.5</gson-version>
+        <testng-version>6.14.3</testng-version>
+        <!-- Test properties -->
+        <money.test.mysql.host>localhost</money.test.mysql.host>
+        <money.test.mysql.database>MoneyTestDB</money.test.mysql.database>
+        <money.test.mysql.user></money.test.mysql.user>
+        <money.test.mysql.password></money.test.mysql.password>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>persistence</artifactId>
-            <version>18.2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>crypto</artifactId>
-            <version>1.0.1</version>
+            <version>${persistence-version}</version>
         </dependency>
         <dependency>
             <groupId>org.panteleyev</groupId>
@@ -60,11 +63,6 @@
             <version>${mysql-connector-version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-csv</artifactId>
-            <version>${apache-csv-version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>${jsoup-version}</version>
@@ -72,12 +70,12 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.5</version>
+            <version>${gson-version}</version>
         </dependency>
         <dependency>
             <groupId>com.jcraft</groupId>
             <artifactId>jsch</artifactId>
-            <version>0.1.54</version>
+            <version>${jsch-version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -102,7 +100,7 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>6.14.3</version>
+            <version>${testng-version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -118,6 +116,26 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-toolchains-plugin</artifactId>
+                <version>1.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>toolchain</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <toolchains>
+                        <jdk>
+                            <version>11</version>
+                            <vendor>openjdk</vendor>
+                        </jdk>
+                    </toolchains>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
@@ -127,7 +145,7 @@
                     <dependency>
                         <groupId>org.ow2.asm</groupId>
                         <artifactId>asm</artifactId>
-                        <version>6.2.1</version>
+                        <version>7.1</version>
                     </dependency>
                 </dependencies>
             </plugin>
@@ -156,7 +174,6 @@
                             <goal>copy-dependencies</goal>
                         </goals>
                         <configuration>
-                            <includeScope>compile</includeScope>
                             <includeScope>runtime</includeScope>
                             <outputDirectory>target/jmods</outputDirectory>
                         </configuration>
@@ -166,7 +183,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.1</version>
+                <version>3.0.0-M3</version>
                 <configuration>
                     <suiteXmlFiles>
                         <suiteXmlFile>src/test/testng.xml</suiteXmlFile>
@@ -174,6 +191,11 @@
                     <argLine>
                         --add-reads org.panteleyev.persistence=org.panteleyev.money
                         --add-exports javafx.base/com.sun.javafx.event=controlsfx
+                        --add-opens javafx.graphics/javafx.scene=controlsfx
+                        -Dmysql.host=${money.test.mysql.host}
+                        -Dmysql.user=${money.test.mysql.user}
+                        -Dmysql.password=${money.test.mysql.password}
+                        -Dmysql.database=${money.test.mysql.database}
                     </argLine>
                 </configuration>
             </plugin>
